<resources>
    <string name="app_name">Forma</string>
    <string name="start">Start</string>
    <string name="plus">+</string>
    <string name="rest_time_seconds">Rest(minutes)</string>
    <string name="minus">-</string>
    <string name="work_seconds">Work Seconds</string>
    <string name="work_minutes">Work Minutes</string>
    <string name="number_of_sets">Number of Sets</string>
    <string name="error_no_work_data">No work data, please enter value</string>
</resources>